zor masalalar